tests/type_errors/inline_lambda_ord.nos
# expect_error: does not implement Ord
# Inline lambda expressions should not bypass Ord trait checking
main() = (x => x) > (y => y)
